src/test/ui/parser/issues/issue-13483.rs
fn main() {
    if true {
    } else if { //~ ERROR missing condition
    //~^ ERROR mismatched types
    } else {
    }
}

fn foo() {
    if true {
    } else if { //~ ERROR missing condition
    //~^ ERROR mismatched types
    }
    bar();
}

fn bar() {}
